# yak-o-matic

./: .gitignore  LICENSE  README.txt  Types.hs  YakCli.hs  YakGit.hs  YakGraph.hs  YakWeb.hs  org-yak.hs  planning.dot  yak-o-web.hs  yak-test.hs  yak.cabal  yak.hs  yak2cfd.hs  yakgraph.cabal  yakgraph.hs
Yak/: Org.hs
static/html/: cfd.html
