Name:                 yak-o-matic
Version:              0.1
Build-type:           Simple
Synopsis:             A utility to manage graph of Yak-shaving tasks within a Git repository
License:              LGPL
License-file:         LICENSE
Author:               Willem van den Ende
                      Arnaud Bailly
Maintainer:           Willem van den Ende 
                      Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2

Executable yak-o-matic
  build-depends:      base, containers, text == 0.11.2.3, libgit, graphviz
  hs-source-dirs:     .
  main-is:            yak.hs
  ghc-options:        -Wall

Executable yak-o-web
  build-depends:      base, containers, text == 0.11.2.3, libgit, graphviz, scotty == 0.4.*, wai == 1.3.0.2, resourcet == 0.4.*, wai-middleware-static == 0.3.1, wai-extra == 1.3.2.1, http-types == 0.7.*
  hs-source-dirs:     .
  main-is:            yak-o-web.hs
  ghc-options:        -Wall

Test-Suite yak-o-matic-test
    type:          exitcode-stdio-1.0
    main-is:       yak-test.hs
    build-depends: base, doctest, libgit

