Name:                 yak-o-matic
Version:              0.1
Build-type:           Simple
Synopsis:             A utility to manage graph of Yak-shaving tasks within a Git repository
License:              BSD3
License-file:         LICENSE
Author:               Willem van den Ende
                      Arnaud Bailly
Maintainer:           Willem van den Ende <willem@qwan.eu>
                      Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2

Executable yak-o-matic
  build-depends:      base, containers, text == 0.11.2.3, libgit, graphviz
  hs-source-dirs:     .
  main-is:            yak.hs
  ghc-options:        -Wall

Test-Suite yak-o-matic-test
    type:          exitcode-stdio-1.0
    main-is:       yak-test.hs
    build-depends: base, doctest, libgit

