Name:                 yak-o-matic
Version:              0.1
Build-type:           Simple
Synopsis:             A utility to manage graph of Yak-shaving tasks within a Git repository
License:              BSD3
License-file:         LICENSE
Author:               Willem van den Ende
                      Arnaud Bailly
Maintainer:           Willem van den Ende <willem@qwan.eu>
                      Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.10

Executable yak-o-matic
  build-depends:      base >= 4,
                      containers,
                      text == 0.11.2.3,
                      libgit == 0.3.0,
                      graphviz == 2999.16.0.0,
                      time >= 1.4,
                      old-locale >= 1.0,
                      mtl == 2.1.2
  default-language:   Haskell2010        
  hs-source-dirs:     .
  main-is:            yak.hs
  ghc-options:        -Wall

Executable yak-o-web
  build-depends:      base >= 4,
                      containers,
                      text == 0.11.2.3,
                      mtl == 2.1.2,
                      libgit == 0.3.0,
                      graphviz == 2999.16.0.0,
                      time == 1.4,
                      old-locale >= 1.0,
                      scotty == 0.4.6,
                      bytestring == 0.9.2.1,
                      aeson == 0.6.1.0,
                      utf8-string == 0.3.7,
                      HTTP == 4000.2.8,
                      wai-middleware-static == 0.3.1,
                      wai-extra == 1.3.2.4
  default-language:   Haskell2010        
  hs-source-dirs:     .
  main-is:            yak-o-web.hs
  ghc-options:        -Wall

Test-Suite yak-o-matic-test
    type:          exitcode-stdio-1.0
    main-is:       yak-test.hs
    default-language:   Haskell2010        
    build-depends: base, doctest, libgit

